# harness

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
schema/: nexus.schema
src/: claude.rs  claude_session.rs  cli_argument.rs  client.rs  command.rs  configuration.rs  daemon.rs  delivery.rs  error.rs  harness.rs  launch.rs  lib.rs  main.rs  meta.rs  pi.rs  runtime.rs  subscription.rs  supervision.rs  terminal.rs  transcript.rs
tests/: actor_discipline_truth.rs  actor_runtime_truth.rs  claude_artifact_observer.rs  claude_session_observation.rs  claude_session_stream.rs  component_cli.rs  daemon.rs  harness_daemon_real_pi_steer.rs  launch.rs  message_router_harness_e2e.rs  message_router_harness_pi_steer_e2e.rs  pi_rpc_live.rs  smoke.rs  subscription_truth.rs
