[package]
name         = "harness"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/harness"
description  = "Interactive harness abstraction for Persona."
publish      = false

[lib]
name = "harness"
path = "src/lib.rs"

[[bin]]
name = "harness-daemon"
path = "src/main.rs"

[dependencies]
kameo                   = { version = "0.20", default-features = false, features = ["macros", "tracing"] }
rkyv                    = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-core            = { git = "https://github.com/LiGoldragon/signal-core.git" }
signal-frame           = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-persona         = { git = "https://github.com/LiGoldragon/signal-persona.git" }
signal-persona-origin     = { git = "https://github.com/LiGoldragon/signal-persona-origin.git" }
signal-harness = { git = "https://github.com/LiGoldragon/signal-harness.git", branch = "main" }
signal-persona-terminal = { git = "https://github.com/LiGoldragon/signal-persona-terminal.git", branch = "main" }
serde_json              = "1"
thiserror               = "2"
tokio                   = { version = "1", features = ["rt-multi-thread", "macros"] }
triad-runtime           = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"

[dev-dependencies]
message       = { git = "https://github.com/LiGoldragon/message.git", branch = "main" }
nota-codec    = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
signal-router = { git = "https://github.com/LiGoldragon/signal-router.git", branch = "main" }
tempfile      = "3"
