[package]
name         = "harness"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/harness"
description  = "Interactive harness abstraction for Persona."
publish      = false

[lib]
name = "harness"
path = "src/lib.rs"

[[bin]]
name = "harness"
path = "src/main.rs"

[[bin]]
name = "meta-harness"
path = "src/bin/meta_harness.rs"

[[bin]]
name = "harness-daemon"
path = "src/bin/harness_daemon.rs"

[dependencies]
kameo                   = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main", default-features = false, features = ["macros", "tracing"] }
meta-signal-harness     = { git = "https://github.com/LiGoldragon/meta-signal-harness.git", branch = "main" }
nota-next               = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv                    = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame           = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-harness         = { git = "https://github.com/LiGoldragon/signal-harness.git", branch = "main" }
signal-persona         = { git = "https://github.com/LiGoldragon/signal-persona.git", branch = "main" }
signal-terminal        = { git = "https://github.com/LiGoldragon/signal-terminal.git", branch = "main" }
serde_json              = "1"
thiserror               = "2"
tokio                   = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
triad-runtime           = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"

[dev-dependencies]
message       = { git = "https://github.com/LiGoldragon/message.git", branch = "main", features = [
    "nota-text",
] }
signal-router = { git = "https://github.com/LiGoldragon/signal-router.git", branch = "main" }
tempfile      = "3"

[patch.crates-io]
kameo = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main" }
