[package]
name         = "harness"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/harness"
description  = "Interactive harness abstraction for Persona."
publish      = false

[lib]
name = "harness"
path = "src/lib.rs"

[[bin]]
name = "harness"
path = "src/main.rs"

[[bin]]
name = "meta-harness"
path = "src/bin/meta_harness.rs"

[[bin]]
name = "harness-daemon"
path = "src/bin/harness_daemon.rs"

[[bin]]
name = "harness-claude-artifact-observer-test"
path = "src/bin/harness_claude_artifact_observer_test.rs"

[[bin]]
name = "harness-claude-session-stream-test"
path = "src/bin/harness_claude_session_stream_test.rs"

[[test]]
name = "message_router_harness_e2e"
path = "tests/message_router_harness_e2e.rs"
required-features = ["message-router-e2e"]

[[test]]
name = "message_router_harness_pi_steer_e2e"
path = "tests/message_router_harness_pi_steer_e2e.rs"
required-features = ["message-router-e2e"]

[features]
default = []
message-router-e2e = ["dep:message", "dep:signal-router"]

[dependencies]
kameo                   = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main", default-features = false, features = ["macros", "tracing"] }
meta-signal-harness     = { git = "https://github.com/LiGoldragon/meta-signal-harness.git", branch = "main" }
nota               = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
rkyv                    = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame           = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-harness         = { git = "https://github.com/LiGoldragon/signal-harness.git", branch = "main" }
signal-persona         = { git = "https://github.com/LiGoldragon/signal-persona.git", branch = "main" }
signal-terminal        = { git = "https://github.com/LiGoldragon/signal-terminal.git", branch = "main" }
serde_json              = "1"
thiserror               = "2"
tokio                   = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
triad-runtime           = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }
notify = "8.2.0"
message                 = { git = "https://github.com/LiGoldragon/message.git", branch = "main", features = [
    "nota-text",
], optional = true }
signal-router          = { git = "https://github.com/LiGoldragon/signal-router.git", branch = "main", optional = true }

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"

[dev-dependencies]
tempfile      = "3"

[patch.crates-io]
kameo = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main" }
